--- a/index.html
+++ b/index.html
@@ -114,6 +114,56 @@
           <img src="./resource/tedx_oau.png" alt="" />
         </div>
 
+        <div class="blog__wrapper de-active">
+          <h2 class="blog__header container">
+             Our Blog Is Live!!!
+          </h2>
+          <article class="blog__container container">
+            <div class="blog__description grid">
+              <h3 class=blog__title>How to become an exceptional public speaker as an introvert</h3>
+              <p class="blog__summary">
+                We’re all teeming with ideas, but some of us need help to share those ideas with as much passion as we want. Fortunately, TEDxOAU is here to help—and we’re armed with tips!
+              </p>
+              <a href="https://tedxoau.com/public-speaking-tips-for-introvert/" class="blog__link"
+                ><span>See More</span><i class="bx bx-right-arrow-alt"></i
+              ></a>
+            </div>
+            <!--==================== TEAM1 ====================-->
+            <div class="blog__contents">
+              <img
+                src="./resource//live_blogs.jpg""
+                alt="blog_post"
+                class="blog__img"
+              />
+            </div>
+          </article>
+        </div>
+
+        <div class="blog__wrapper de-active">
+          <h2 class="blog__header container">
+            Our Blog Is Live!!!
+          </h2>
+          <article class="blog__container container">
+            <div class="blog__description grid">
+              <h3 class=blog__title>Meet the World's Youngest speaker in TEDx History</h3>
+              <p class="blog__summary">
+                This TEDx speaker is showing the world that there’s no ageism with ideas. Learn about the 5-year-old child prodigy’s life and listen to her TED Talk about the power of curiosity.
+              </p>
+              <a href="https://tedxoau.com/meet-the-worlds-youngest-speaker-in-tedx-history/" class="blog__link"
+                ><span>See More</span><i class="bx bx-right-arrow-alt"></i
+              ></a>
+            </div>
+            <!--==================== TEAM1 ====================-->
+            <div class="blog__contents">
+              <img
+                src="./resource//live_blogs.jpg"
+                alt="blog_post"
+                class="blog__img"
+              />
+            </div>
+          </article>
+        </div>
+
         <div class="blog__wrapper">
           <h2 class="blog__header container">
             Our Blog Is Live!!!
@@ -126,7 +176,7 @@
                 No problem!
                 This article is a great place to start from to learn about the iconic conferences and talks.
               </p>
-              <a href="https://tedxoau.com/blog/" class="blog__link"
+              <a href="https://tedxoau.com/ted-tedx-and-tedxoau-what-makes-them-all-different-yet-special/" class="blog__link"
                 ><span>See More</span><i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
@@ -152,7 +202,7 @@
                 From Chimamanda Ngozi Adichie to Malcolm Gladwell and Peace Itimi, learn what members of the TEDxOAU team consider the creme de la creme of TED Talks.
                 Disclaimer: All TED Talks rock!
               </p>
-              <a href="https://tedxoau.com/blog/" class="blog__link"
+              <a href="https://tedxoau.com/our-top-10-tedx-talks/" class="blog__link"
                 ><span>See More</span><i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
@@ -167,57 +217,7 @@
           </article>
         </div>
 
-        <div class="blog__wrapper de-active">
-          <h2 class="blog__header container">
-             Our Blog Is Live!!!
-          </h2>
-          <article class="blog__container container">
-            <div class="blog__description grid">
-              <h3 class=blog__title>Volunteers are now On-board</h3>
-              <p class="blog__summary">
-                Our Volunteers are aboard and we're so excited. So much so that we had a chit-chat with the Volunteer management team how it went getting them on-board.
-                Have a look.
-              </p>
-              <a href="https://tedxoau.com/blog/" class="blog__link"
-                ><span>See More</span><i class="bx bx-right-arrow-alt"></i
-              ></a>
-            </div>
-            <!--==================== TEAM1 ====================-->
-            <div class="blog__contents">
-              <img
-                src="./resource//live_blogs.jpg""
-                alt="blog_post"
-                class="blog__img"
-              />
-            </div>
-          </article>
-        </div>
-
-        <div class="blog__wrapper de-active">
-          <h2 class="blog__header container">
-            Our Blog Is Live!!!
-          </h2>
-          <article class="blog__container container">
-            <div class="blog__description grid">
-              <h3 class=blog__title>What should your expect from TEDxOAU?</h3>
-              <p class="blog__summary">
-                Either this is going to be your first TEDx event or you've been to several others, your gut-feeling still tells you TEDxOAU is going to be different, but you can't place it.
-                Here's what to expect.
-              </p>
-              <a href="https://tedxoau.com/blog/" class="blog__link"
-                ><span>See More</span><i class="bx bx-right-arrow-alt"></i
-              ></a>
-            </div>
-            <!--==================== TEAM1 ====================-->
-            <div class="blog__contents">
-              <img
-                src="./resource//live_blogs.jpg"
-                alt="blog_post"
-                class="blog__img"
-              />
-            </div>
-          </article>
-        </div>
+        
 
         <div class="blog__next" id="next"><p>Next</p></div>
       </section>
@@ -228,7 +228,7 @@
           <a href="https://instagram.com/tedxoauofficial?igshid=YmMyMTA2M2Y=" target="_blank" class="updates__box">
             <span class="updates__text">Follow Us</span>
           </a>
-          <a href="#" target="_blank" class="updates__box updates__box--white">
+          <a href="https://www.instagram.com/p/CfvlS9CsJNr/?igshid=YmMyMTA2M2Y=" target="_blank" class="updates__box updates__box--white">
             <span class="updates__text updates__text--red">Speaker</span>
           </a>
           <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8qBW3mBk16VBNcuJLhI3647kuNhY511iB4b30OF7XWsUTqQ/viewform" target="_blank" class="updates__box">
