--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
       <section class="home" id="home">
         <div class="home__container--intro container">
           <h1>
-            <span class="intro-title">Welcome <br /> to</span>
+            <span class="intro-title"
+              >Welcome <br />
+              to</span
+            >
             <span class="intro-subtitle" id="word">TEDxOAU</span>
           </h1>
         </div>
@@ -80,7 +83,15 @@
           <div class="good-look">
             <div class="home__container--brief">
               <h2>
-                In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. Our event is called TEDxOAU, where x = independently organized TED event. At our TEDxOAU event, TED Talks video and live speakers will combine to spark deep discussion and connection in a small group. The TED Conference provides general guidance for the TEDx program, but individual TEDx events, including ours, are self-organized.
+                In the spirit of ideas worth spreading, TED has created a
+                program called TEDx. TEDx is a program of local, self-organized
+                events that bring people together to share a TED-like
+                experience. Our event is called TEDxOAU, where x = independently
+                organized TED event. At our TEDxOAU event, TED Talks video and
+                live speakers will combine to spark deep discussion and
+                connection in a small group. The TED Conference provides general
+                guidance for the TEDx program, but individual TEDx events,
+                including ours, are self-organized.
               </h2>
             </div>
             <embed src="resource/scroll-animation.gif" class="text__scroll" />
@@ -88,13 +99,22 @@
 
           <div class="bad-look">
             <h2 class="hero__text hero__text--sub">
-              <strong class="blog__title">We are...</strong><br>
-              The Obafemi Awolowo University community has always been home to amazing conversations, tenacious humans, radical innovations, a little too many tote bags, and—of course—its iconic bats. Now, it’s going to be a hotspot for ideas worth spreading by humans worth listening to on grounds we’ve come to love.
-              And whether you identify as an Awo boy or a Maintenance chick, a fresher or a stallite, a T-shirt fanatic or a fashion icon, an environmentally-conscious trekker or a bike addict, a shana or a… well, whatever—there’s a TEDxOAU Talk that’s just right for you.
+              <strong class="blog__title">We are...</strong><br />
+              The Obafemi Awolowo University community has always been home to
+              amazing conversations, tenacious humans, radical innovations, a
+              little too many tote bags, and—of course—its iconic bats. Now,
+              it’s going to be a hotspot for ideas worth spreading by humans
+              worth listening to on grounds we’ve come to love. And whether you
+              identify as an Awo boy or a Maintenance chick, a fresher or a
+              stallite, a T-shirt fanatic or a fashion icon, an
+              environmentally-conscious trekker or a bike addict, a shana or a…
+              well, whatever—there’s a TEDxOAU Talk that’s just right for you.
               We’d love for you to join us.
             </h2>
             <h2 class="hero__text hero__text--font">
-                "Money will not last. Fame will not last. But how you touch others'lives will always stay behind!" <Br> _Avijeet Das
+              "Money will not last. Fame will not last. But how you touch
+              others'lives will always stay behind!" <br />
+              _Avijeet Das
             </h2>
           </div>
 
@@ -115,41 +135,46 @@
         </div>
 
         <div class="blog__wrapper de-active">
-          <h2 class="blog__header container">
-             Our Blog Is Live!!!
-          </h2>
+          <h2 class="blog__header container">Our Blog Is Live!!!</h2>
           <article class="blog__container container">
             <div class="blog__description grid">
-              <h3 class=blog__title>How to become an exceptional public speaker as an introvert</h3>
+              <h3 class="blog__title">
+                How to become an exceptional public speaker as an introvert
+              </h3>
               <p class="blog__summary">
-                We’re all teeming with ideas, but some of us need help to share those ideas with as much passion as we want. Fortunately, TEDxOAU is here to help—and we’re armed with tips!
+                We’re all teeming with ideas, but some of us need help to share
+                those ideas with as much passion as we want. Fortunately,
+                TEDxOAU is here to help—and we’re armed with tips!
               </p>
-              <a href="https://tedxoau.com/public-speaking-tips-for-introvert/" class="blog__link"
+              <a
+                href="https://tedxoau.com/public-speaking-tips-for-introvert/"
+                class="blog__link"
                 ><span>See More</span><i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
             <!--==================== TEAM1 ====================-->
             <div class="blog__contents">
-              <img
-                src="./resource//live_blogs.jpg""
-                alt="blog_post"
-                class="blog__img"
-              />
+              <img src="./resource//live_blogs.jpg"" alt="blog_post"
+              class="blog__img" />
             </div>
           </article>
         </div>
 
         <div class="blog__wrapper de-active">
-          <h2 class="blog__header container">
-            Our Blog Is Live!!!
-          </h2>
+          <h2 class="blog__header container">Our Blog Is Live!!!</h2>
           <article class="blog__container container">
             <div class="blog__description grid">
-              <h3 class=blog__title>Meet the World's Youngest speaker in TEDx History</h3>
+              <h3 class="blog__title">
+                Meet the World's Youngest speaker in TEDx History
+              </h3>
               <p class="blog__summary">
-                This TEDx speaker is showing the world that there’s no ageism with ideas. Learn about the 5-year-old child prodigy’s life and listen to her TED Talk about the power of curiosity.
+                This TEDx speaker is showing the world that there’s no ageism
+                with ideas. Learn about the 5-year-old child prodigy’s life and
+                listen to her TED Talk about the power of curiosity.
               </p>
-              <a href="https://tedxoau.com/meet-the-worlds-youngest-speaker-in-tedx-history/" class="blog__link"
+              <a
+                href="https://tedxoau.com/meet-the-worlds-youngest-speaker-in-tedx-history/"
+                class="blog__link"
                 ><span>See More</span><i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
@@ -165,18 +190,21 @@
         </div>
 
         <div class="blog__wrapper">
-          <h2 class="blog__header container">
-            Our Blog Is Live!!!
-          </h2>
+          <h2 class="blog__header container">Our Blog Is Live!!!</h2>
           <article class="blog__container container">
             <div class="blog__description grid">
-              <h3 class=blog__title>TED, TEDx, and TEDxOAU: What makes them all different, yet special.</h3>
+              <h3 class="blog__title">
+                TED, TEDx, and TEDxOAU: What makes them all different, yet
+                special.
+              </h3>
               <p class="blog__summary">
-                New to the wonderful world of TED?
-                No problem!
-                This article is a great place to start from to learn about the iconic conferences and talks.
+                New to the wonderful world of TED? No problem! This article is a
+                great place to start from to learn about the iconic conferences
+                and talks.
               </p>
-              <a href="https://tedxoau.com/ted-tedx-and-tedxoau-what-makes-them-all-different-yet-special/" class="blog__link"
+              <a
+                href="https://tedxoau.com/ted-tedx-and-tedxoau-what-makes-them-all-different-yet-special/"
+                class="blog__link"
                 ><span>See More</span><i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
@@ -192,17 +220,18 @@
         </div>
 
         <div class="blog__wrapper de-active">
-          <h2 class="blog__header container">
-             Our Blog Is Live!!!
-          </h2>
+          <h2 class="blog__header container">Our Blog Is Live!!!</h2>
           <article class="blog__container container">
             <div class="blog__description grid">
-              <h3 class=blog__title>Our top 10 TEDx talks.</h3>
+              <h3 class="blog__title">Our top 10 TEDx talks.</h3>
               <p class="blog__summary">
-                From Chimamanda Ngozi Adichie to Malcolm Gladwell and Peace Itimi, learn what members of the TEDxOAU team consider the creme de la creme of TED Talks.
-                Disclaimer: All TED Talks rock!
+                From Chimamanda Ngozi Adichie to Malcolm Gladwell and Peace
+                Itimi, learn what members of the TEDxOAU team consider the creme
+                de la creme of TED Talks. Disclaimer: All TED Talks rock!
               </p>
-              <a href="https://tedxoau.com/our-top-10-tedx-talks/" class="blog__link"
+              <a
+                href="https://tedxoau.com/our-top-10-tedx-talks/"
+                class="blog__link"
                 ><span>See More</span><i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
@@ -217,21 +246,31 @@
           </article>
         </div>
 
-        
-
         <div class="blog__next" id="next"><p>Next</p></div>
       </section>
 
       <!-- ================Communities Section============ -->
       <section class="updates-section section">
         <div class="updates container">
-          <a href="https://instagram.com/tedxoauofficial?igshid=YmMyMTA2M2Y=" target="_blank" class="updates__box">
+          <a
+            href="https://instagram.com/tedxoauofficial?igshid=YmMyMTA2M2Y="
+            target="_blank"
+            class="updates__box"
+          >
             <span class="updates__text">Follow Us</span>
           </a>
-          <a href="https://www.instagram.com/p/CfvlS9CsJNr/?igshid=YmMyMTA2M2Y=" target="_blank" class="updates__box updates__box--white">
+          <a
+            href="https://www.instagram.com/p/CfvlS9CsJNr/?igshid=YmMyMTA2M2Y="
+            target="_blank"
+            class="updates__box updates__box--white"
+          >
             <span class="updates__text updates__text--red">Speaker</span>
           </a>
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8qBW3mBk16VBNcuJLhI3647kuNhY511iB4b30OF7XWsUTqQ/viewform" target="_blank" class="updates__box">
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSd8qBW3mBk16VBNcuJLhI3647kuNhY511iB4b30OF7XWsUTqQ/viewform"
+            target="_blank"
+            class="updates__box"
+          >
             <span class="updates__text">Community</span></a
           >
         </div>
@@ -250,21 +289,31 @@
             <div class="upper_right-item">
               <h3>Meet</h3>
               <p>
-                TED conferences are worldwide that open a world of opportunity to attendees, speakers, and sponsors. They provide platforms to share ideas, engage in exciting conversations, and network with amazing humans.
+                TED conferences are worldwide that open a world of opportunity
+                to attendees, speakers, and sponsors. They provide platforms to
+                share ideas, engage in exciting conversations, and network with
+                amazing humans.
               </p>
             </div>
 
             <div class="upper_right-item">
               <h3>Connect</h3>
               <p>
-                And like thousands of other TED and TEDx events that have held in the past, TEDxOAU holds the same promise of high-quality conversations and connections. But, of course, the conference will feature all the energy you’ve come to expect from the largest academic community in the ancient city of Ile-Ife.
+                And like thousands of other TED and TEDx events that have held
+                in the past, TEDxOAU holds the same promise of high-quality
+                conversations and connections. But, of course, the conference
+                will feature all the energy you’ve come to expect from the
+                largest academic community in the ancient city of Ile-Ife.
               </p>
             </div>
 
             <div class="upper_right-item">
               <h3>Talk</h3>
               <p>
-                Expect extraordinary talks from remarkable speakers on diverse topics, an opportunity to make impactful connections with progressive peers, as well as a chance to be a part of one of the biggest conferences on earth.
+                Expect extraordinary talks from remarkable speakers on diverse
+                topics, an opportunity to make impactful connections with
+                progressive peers, as well as a chance to be a part of one of
+                the biggest conferences on earth.
               </p>
             </div>
           </div>
@@ -274,10 +323,12 @@
           <div class="footer__container--lower_mail">
             <h2>Want to stay updated?</h2>
             <p>
-              TEDxOAU is going to take Ogbafemi by storm and we want to put you in its eye:<br>       but we’d like to get in your DMs first. <br>
-              Drop your email address to get all TEDxOAU updates so you don’t miss a thing. <br>
+              TEDxOAU is going to take Ogbafemi by storm and we want to put you
+              in its eye:<br />
+              but we’d like to get in your DMs first. <br />
+              Drop your email address to get all TEDxOAU updates so you don’t
+              miss a thing. <br />
               We promise not to spam you!
-
             </p>
             <div class="footer__container--lower_input">
               <button class="lower_input-btn">Email</button>
@@ -302,13 +353,16 @@
                 <li class="footer__list-item">
                   <a href="team.html">Meet Our Team</a>
                 </li>
-                
               </ul>
 
               <ul>
                 <li class="footer__list-item"><a href="#">Sponsor</a></li>
-                <li class="footer__list-item"><a href="https://tedxoau.com/blog/">Blog</a></li>
-                <li class="footer__list-item"><a href="mailto:info@tedxoau.com">Contact Us</a></li>
+                <li class="footer__list-item">
+                  <a href="https://tedxoau.com/blog/">Blog</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="mailto:info@tedxoau.com">Contact Us</a>
+                </li>
                 <!-- <li class="footer__list-item"><a href="#">FAQs</a></li>
                 <li class="footer__list-item">
                   <a href="#">Programme Schedule</a>
@@ -345,14 +399,16 @@
         </div>
       </div>
 
-      <p class="footer__tedx">This independent TEDx event is operated under license from TED.</p>
+      <p class="footer__tedx">
+        This independent TEDx event is operated under license from TED.
+      </p>
     </footer>
-        <!--=============== SCROLL UP ===============-->
+    <!--=============== SCROLL UP ===============-->
     <a href="#" class="scrolltop" id="scroll-top">
-        <i class='bx bx-up-arrow-alt scrolltop--icon'></i>
+      <i class="bx bx-up-arrow-alt scrolltop--icon"></i>
     </a>
 
     <!-- This is the javascript code for the TEDxOAU animation on the home page-->
-    <script src="vendor/js/script.js"></script>
+    <script src="vendor/js/home.js"></script>
   </body>
 </html>
