--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
             <div class="footer__list">
               <ul>
                 <li class="footer__list-item">
-                  <a href="#">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li class="footer__list-item">
                   <a href="about.html">About</a>
@@ -170,9 +170,13 @@
               </ul>
 
               <ul>
-                <li class="footer__list-item"><a href="#">Sponsor</a></li>
-                <li class="footer__list-item"><a href="https://tedxoau.com/blog/">Blog</a></li>
-                <li class="footer__list-item"><a href="mailto:info@tedxoau.com">Contact Us</a></li>
+                <li class="footer__list-item"><a href="https://www.instagram.com/p/CgJP6idsd13/?utm_source=ig_web_copy_link">Sponsor</a></li>
+                <li class="footer__list-item">
+                  <a href="https://tedxoau.com/blog/">Blog</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="mailto:info@tedxoau.com">Contact Us</a>
+                </li>
                 <!-- <li class="footer__list-item"><a href="#">FAQs</a></li>
                 <li class="footer__list-item">
                   <a href="#">Programme Schedule</a>
