--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="TEDxOAU">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- ================BOX ICONS===================== -->
     <link
@@ -114,7 +117,7 @@
             <h2 class="hero__text hero__text--font">
               "Money will not last. Fame will not last. But how you touch
               others'lives will always stay behind!" <br />
-              _Avijeet Das
+              <em class="hero__text--em">_Avijeet Das</em>
             </h2>
           </div>
 
@@ -128,10 +131,11 @@
         </div>
       </section>
 
+      
       <!-- ================Blog Section============ -->
       <section class="blog section container" id="blog">
         <div class="blog__section--logo container">
-          <img src="./resource/tedx_oau.png" alt="" />
+          <img src="./resource/tedx_oau.png" alt="Blog Post" />
         </div>
 
         <div class="blog__wrapper de-active">
@@ -246,9 +250,8 @@
           </article>
         </div>
 
-        <div class="blog__next" id="next"><p>Next</p></div>
-      </section>
-
+        <div class="blog__next" id="next" title="Click to view more blog post"><p>Next</p></div>
+    
       <!-- ================Communities Section============ -->
       <section class="updates-section section">
         <div class="updates container">
@@ -257,21 +260,21 @@
             target="_blank"
             class="updates__box"
           >
-            <span class="updates__text">Follow Us</span>
+            <span class="updates__text" title="Follow Us for More Info">Follow Us</span>
           </a>
           <a
-            href="https://www.instagram.com/p/CfvlS9CsJNr/?igshid=YmMyMTA2M2Y="
+            href="https://www.instagram.com/p/CgJP6idsd13/?utm_source=ig_web_copy_link"
             target="_blank"
             class="updates__box updates__box--white"
           >
-            <span class="updates__text updates__text--red">Speaker</span>
+            <span class="updates__text updates__text--red" title="Become A Sponsor">Sponsor</span>
           </a>
           <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSd8qBW3mBk16VBNcuJLhI3647kuNhY511iB4b30OF7XWsUTqQ/viewform"
+            href="https://mailchi.mp/b2bbe4dd94a0/tedxoau-newsletter"
             target="_blank"
             class="updates__box"
           >
-            <span class="updates__text">Community</span></a
+            <span class="updates__text" title="Join Our Community">Community</span></a
           >
         </div>
       </section>
@@ -356,7 +359,7 @@
               </ul>
 
               <ul>
-                <li class="footer__list-item"><a href="#">Sponsor</a></li>
+                <li class="footer__list-item"><a href="https://www.instagram.com/p/CgJP6idsd13/?utm_source=ig_web_copy_link">Sponsor</a></li>
                 <li class="footer__list-item">
                   <a href="https://tedxoau.com/blog/">Blog</a>
                 </li>
