--- a/team.html
+++ b/team.html
@@ -109,7 +109,7 @@
               </div>
               <div class="team__details">
                 <h3 class="team__name">Olaniyi Popoola</h3>
-                <p class="team__role">Marketing & Design Lead</p>
+                <p class="team__role">Marketing & Design Team Lead</p>
               </div>
             </div>
             <!-- Ayo -->
@@ -125,7 +125,7 @@
               </div>
               <div class="team__details">
                 <h3 class="team__name">Ayomide Adekola</h3>
-                <p class="team__role">Event Management Lead</p>
+                <p class="team__role">Event Management Team Lead</p>
               </div>
             </div>
             <!-- Tolu -->
@@ -141,7 +141,7 @@
               </div>
               <div class="team__details">
                 <h3 class="team__name">Tolu Oluwadare</h3>
-                <p class="team__role">Curations Lead</p>
+                <p class="team__role">Curations Team Lead</p>
               </div>
             </div>
             <!-- Joy -->
@@ -158,7 +158,7 @@
               <div class="team__details">
                 <h3 class="team__name">Joy Eze</h3>
                 <p class="team__role">
-                  Volunteer Recruitment & Management lead
+                  Volunteer Recruitment & Management Team Lead
                 </p>
               </div>
             </div>
@@ -175,7 +175,7 @@
               </div>
               <div class="team__details">
                 <h3 class="team__name">Ife Williams</h3>
-                <p class="team__role">Production Lead</p>
+                <p class="team__role">Production Team Lead</p>
               </div>
             </div>
             <!-- Chinemerem -->
@@ -192,7 +192,7 @@
               <div class="team__details">
                 <h3 class="team__name">Ajala Joy Chinemerem</h3>
                 <p class="team__role">
-                  Volunteer Recruitment & Management Co-lead
+                  Volunteer Recruitment & Management Team Lead
                 </p>
               </div>
             </div>
@@ -209,7 +209,7 @@
               </div>
               <div class="team__details">
                 <h3 class="team__name">Tosin Ajetunmobi</h3>
-                <p class="team__role">Content Lead</p>
+                <p class="team__role">Content Team Lead</p>
               </div>
             </div>
             <!-- Aanu -->
@@ -225,7 +225,7 @@
               </div>
               <div class="team__details">
                 <h3 class="team__name">Anu Adelaja</h3>
-                <p class="team__role">Social Media Lead</p>
+                <p class="team__role">Social Media Team Lead</p>
               </div>
             </div>
             <!-- Samuel -->
@@ -241,7 +241,7 @@
               </div>
               <div class="team__details">
                 <h3 class="team__name">Samuel Jolayemi</h3>
-                <p class="team__role">Web Developer</p>
+                <p class="team__role">Web Development Team Lead</p>
               </div>
             </div>
             <!-- Tobi -->
@@ -257,7 +257,7 @@
               </div>
               <div class="team__details">
                 <h3 class="team__name">Tobiloba Ibraheem</h3>
-                <p class="team__role">Web Developer</p>
+                <p class="team__role">Web Development Team Lead</p>
               </div>
             </div>
           </div>
@@ -302,7 +302,7 @@
                 />
                 <div class="preview__person">
                   <h3 class="preview__name">Olaniyi Popoola</h3>
-                  <p class="preview__role">Marketing & Designs Lead</p>
+                  <p class="preview__role">Marketing & Designs Team Lead</p>
                 </div>
               </div>
               <div class="preview__bio">
@@ -328,7 +328,7 @@
                 />
                 <div class="preview__person">
                   <h3 class="preview__name">Ayomide Adekola</h3>
-                  <p class="preview__role">Event Management Lead</p>
+                  <p class="preview__role">Event Management Team Lead</p>
                 </div>
               </div>
               <div class="preview__bio">
@@ -354,7 +354,7 @@
                 />
                 <div class="preview__person">
                   <h3 class="preview__name">Tolu Oluwadare</h3>
-                  <p class="preview__role">Curation Lead</p>
+                  <p class="preview__role">Curation Team Lead</p>
                 </div>
               </div>
               <div class="preview__bio">
@@ -381,7 +381,7 @@
                 <div class="preview__person">
                   <h3 class="preview__name">Joy Eze</h3>
                   <p class="preview__role">
-                    Volunteer Recruitment & Management Lead
+                    Volunteer Recruitment & Management Team Lead
                   </p>
                 </div>
               </div>
@@ -408,7 +408,7 @@
                 />
                 <div class="preview__person">
                   <h3 class="preview__name">Ife Williams</h3>
-                  <p class="preview__role">Production Lead</p>
+                  <p class="preview__role">Production Team Lead</p>
                 </div>
               </div>
               <div class="preview__bio">
@@ -434,7 +434,7 @@
                 <div class="preview__person">
                   <h3 class="preview__name">Joy Chinemerem</h3>
                   <p class="preview__role">
-                    Volunteer Recruitment & Management Co-Lead
+                    Volunteer Recruitment & Management Team Lead
                   </p>
                 </div>
               </div>
@@ -461,7 +461,7 @@
                 />
                 <div class="preview__person">
                   <h3 class="preview__name">Tosin Ajetunmobi</h3>
-                  <p class="preview__role">Content Lead</p>
+                  <p class="preview__role">Content Team Lead</p>
                 </div>
               </div>
               <div class="preview__bio">
@@ -488,7 +488,7 @@
                 />
                 <div class="preview__person">
                   <h3 class="preview__name">Anu Adelaja</h3>
-                  <p class="preview__role">Social Media Lead</p>
+                  <p class="preview__role">Social Team Lead</p>
                 </div>
               </div>
               <div class="preview__bio">
@@ -514,7 +514,7 @@
                 />
                 <div class="preview__person">
                   <h3 class="preview__name">Samuel Jolayemi</h3>
-                  <p class="preview__role">Web Development Lead</p>
+                  <p class="preview__role">Web Development Team Lead</p>
                 </div>
               </div>
               <div class="preview__bio">
@@ -541,7 +541,7 @@
                 />
                 <div class="preview__person">
                   <h3 class="preview__name">Tobiloba Ibraheem</h3>
-                  <p class="preview__role">Web Development Co-Lead</p>
+                  <p class="preview__role">Web Development Team Lead</p>
                 </div>
               </div>
               <div class="preview__bio">
@@ -581,6 +581,9 @@
             <div class="footer__list">
               <ul>
                 <li class="footer__list-item">
+                  <a href="index.html">Home</a>
+                </li>
+                <li class="footer__list-item">
                   <a href="about.html">About</a>
                 </li>
                 <li class="footer__list-item">
@@ -590,9 +593,13 @@
               </ul>
 
               <ul>
-                <li class="footer__list-item"><a href="#">Sponsor</a></li>
-                <li class="footer__list-item"><a href="#">Blog</a></li>
-                <li class="footer__list-item"><a href="#">Contact Us</a></li>
+                <li class="footer__list-item"><a href="https://www.instagram.com/p/CgJP6idsd13/?utm_source=ig_web_copy_link">Sponsor</a></li>
+                <li class="footer__list-item">
+                  <a href="https://tedxoau.com/blog/">Blog</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="mailto:info@tedxoau.com">Contact Us</a>
+                </li>
                 <!--<li class="footer__list-item"><a href="#">FAQs</a></li>
                 <li class="footer__list-item">
                   <a href="#">Programme Schedule</a>
